--- a/PetDog.css
+++ b/PetDog.css
@@ -173,15 +173,25 @@ li{
     margin-top: 100px;
 
 }
+.Team__Title {
+    background-color: #ededed;
+    padding: 5px 20px;
+    border-radius: 6px;
+    margin-top: 30px;
+}
+.Team__Title div {
+    display: inline-block;
+}
 .Team__TextTop {
     width: 100%;
     text-align: center;
-    font-weight: 700;
-    font-size: 29px;
     line-height: 32px;
-    margin: 0px 0px 10px;
-    color: #272727;
-    font-family: "Open Sans", sans-serif;
+    margin: 25px 0px 10px;
+    text-align: center;
+    font-size: 36px;
+    font-weight: 900;
+    font-family: monospace;
+    color: #e46f6f;
 }
 .Container__img {
     width: 330px;
