--- a/PetDog.css
+++ b/PetDog.css
@@ -50,6 +50,7 @@ li{
 .Bottom--Container--Right ul li a {
     font-size: 16px;
     color: white;
+    font-weight: bold;
 }
 .Bottom--Container--Left a img {
     height: auto;
@@ -181,6 +182,11 @@ li{
 }
 .Team__Title div {
     display: inline-block;
+}
+.Team__Title div:first-child::after {
+    content: "|";
+    color: #ccc;
+    margin: 0px 6px;
 }
 .Team__TextTop {
     width: 100%;
