--- a/Css/CssOption1.css
+++ b/Css/CssOption1.css
@@ -60,8 +60,70 @@ li{
     height: auto;
     width: 190px;
 }
+#ChangeLogo {
+    color: white;
+    font-size: 20px;
+
+}
+#ChangeContainer {
+    position: absolute;
+    background-color: white;
+    width: 150px;
+    height: 100px;
+    top: 100%;
+    left: 0px;
+    border-radius: 5px;
+    background-color: #FBCC92;
+    opacity: 0;
+    visibility: hidden;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+#ChangeButton:hover #ChangeContainer {
+    opacity: 1;
+    visibility: visible;
+}
+#ChangeButton {
+    position: relative;
+}
+.blockcolor {
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+}
+#option1 {
+    background-color: #202020;
+}
+#option2 {
+    background-color: #df6363;
+}
+#option3 {
+    background-color: #86BC42;
+}
 /* Header End */
 
+/* Big Img Start */
+.BigImg {
+    background-image: url(../images/DogBigImg.png);
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+    margin-top: 60px;
+    position: relative;
+}
+.Hello__Img {
+    display: inline-block;
+    position: absolute;
+    top: 30%;
+    right: 76px;
+}
+.Hello__Img h1 {
+    font-size: 70px;
+    font-weight: 800;
+    font-family: cursive;
+}
+/* Big Img End */
 
 /* ProductsDog Start */
 .ProductsDog__Container {
@@ -116,28 +178,6 @@ li{
 
 
 /* ProductsDog End */
-
-/* Big Img Start */
-.BigImg {
-    background-image: url(./images/concho.png);
-    background-size: cover;
-    height: 100vh;
-    width: 100%;
-    margin-top: 60px;
-    position: relative;
-}
-.Hello__Img {
-    display: inline-block;
-    position: absolute;
-    top: 30%;
-    right: 76px;
-}
-.Hello__Img h1 {
-    font-size: 70px;
-    font-weight: 800;
-    font-family: cursive;
-}
-/* Big Img End */
 
 /* Dogs Item Start */
 .Dogs {
